Fix footer copyright layout issues

--- a/home/css/_theme.scss
+++ b/home/css/_theme.scss
@@ -1,5 +1,5 @@
 $primary: rgb(0, 128, 128);
-$primary-bg: mix(white, $primary, 85%);
+$primary-bg: mix(white, $primary, 90%);
 $primary-border: darken($primary, 5%);
 
 $break-lg: 1200px;
