--- a/home/css/layout.scss
+++ b/home/css/layout.scss
@@ -259,6 +259,7 @@ footer {
     img {
         max-height: 40px;
         margin-right: 40px;
+        margin-bottom: 10px;
         vertical-align: baseline;
     }
 
@@ -284,7 +285,6 @@ footer {
         &.copyright-row {
             margin: 0;
             justify-content: space-between;
-            text-align: right;
         }
     }
 
